@@ -1,4 +1,6 @@
 # ChangeLog
+Dev
+    * Fix printer returning to READY instead of IDLE
 
 0.7.0 (2023-05-19)
     * Fixed printer sends info about api key change to Connect after change
